# report_app

./: .gitignore  CODEBUDDY.md  年度检查报告_数据结构.json  年度检查报告本体V1.0.ttl  年度检查报告（港清复线）.json
.codebuddy/plans/: create-codebuddy-doc_aa0bd980.md  docx-template-filler-v2_35d10391(未完成).md  docx-template-filler_5a36ca5c.md  fill-template-with-sample-data_ab2cc091(未完成).md  fix-column-table-filling_68851873.md  fix-conclusion-row-and-header-extraction_2a04cdc5.md  fix-data-filling-v2_7e985422(未完成).md  fix-grounddevice-empty_f71bfcaf.md  (+37 more)
public/: business-architecture.html  index.html  product-logic.html  system-architecture.html
python_report_filler/: README.md  pyproject.toml  requirements.txt
python_report_filler/scripts/: analyze.sh  fill.sh  setup.bat  setup.sh
python_report_filler/src/report_filler/: __init__.py  cli.py  docx_io.py  filler.py  models.py  template_analyzer.py  validator.py  xml_subtree_inserter.py  xml_utils.py
python_report_filler/src/report_filler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python_report_filler/tests/: conftest.py  test_docx_io.py  test_filler.py  test_models.py
scripts/: analyze_final.py  analyze_table_3_1.js  analyze_table_signatures.py  analyze_template.py  check_1_2_sig.js  setup.bat  validate_schema.py
server/: package-lock.json  package.json  server.err  test-debug-tables.js  test-debug2.js  test-debug3.js  test-debug4.js  test-extract.js  test-extract2.js  test-final.js  test-fixed.js  test-quick.js  test-tables.js  test-tables2.js  test-tables3.js  test-tables4.js  test-tables5.js
(+84 files in other folders)
